--- a/TokuCinema/src/styles/globals.scss
+++ b/TokuCinema/src/styles/globals.scss
@@ -25,6 +25,7 @@ input, select {
 
 select {
   height: 40px;
+  font-size: 16px;  
 }
 
 // Important Overrides
